# Dagster_ETL

./: .env.example  .gitignore  README.md  docker-compose.yml  hello.py  pyproject.toml
etl/: pyproject.toml
etl/data/: sample_data.csv
etl/etl/: assets.py  definitions.py
etl/etl.egg-info/: PKG-INFO  requires.txt  top_level.txt
etl/etl/data/: sample_data.csv
scripts/: fill_db.py
