[project]
name = "dagster-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.1",
    "dagster-webserver>=1.10.1",
    "great-expectations>=1.3.7",
    "pandas==2.1.4",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.38",
]
