[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver>=1.10.1",
    "great-expectations==1.3.0",
    "pandas==2.1.4",
    "polars>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "etl.definitions"
code_location_name = "etl"

[tool.setuptools.packages.find]
exclude=["etl_tests"]
